<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <android.support.v7.preference.PreferenceCategory
        android:title="@string/layouts">
        <android.support.v7.preference.ListPreference
            android:title="@string/layout_selection_title"
            android:key="layouts"
            android:summary="@string/layout_selection_summary"
            android:entries="@array/list"
            android:entryValues="@array/values"
            android:defaultValue="qwert"/>
    </android.support.v7.preference.PreferenceCategory>
    <android.support.v7.preference.PreferenceCategory
        android:title="@string/mistypeReduction">
        <android.support.v7.preference.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="mistypeReductionOnOff"
            android:title="@string/activateMistypeReduction" />
        <android.support.v7.preference.SeekBarPreference
            android:dependency="mistypeReductionOnOff"
            android:key="maxKeyEventRate"
            android:title="@string/maxKeyEventRate"
            android:summary="@string/maxKeyEventRate_summary"
            android:max="1000"
            android:defaultValue="200"/>
    </android.support.v7.preference.PreferenceCategory>
</android.support.v7.preference.PreferenceScreen>