<Keyboard xmlns:android="http://schemas.android.com/apk/res/android"
          android:horizontalGap="0px"
          android:keyHeight="60dp"
          android:keyWidth="20%p"
          android:verticalGap="0px">



    <Row>
        <Key
            android:codes="97"
            android:keyEdgeFlags="left"
            android:keyLabel="a"/>
        <Key
            android:codes="98"
            android:keyLabel="b"/>
        <Key
            android:codes="99"
            android:keyLabel="c"/>
        <Key
            android:codes="100"
            android:keyLabel="d"/>
        <Key
            android:codes="101"
            android:keyEdgeFlags="right"
            android:keyLabel="e"/>

    </Row>

    <Row>
        <Key
            android:codes="102"
            android:keyEdgeFlags="left"
            android:keyLabel="f"/>
        <Key
            android:codes="103"

            android:keyLabel="g"/>
        <Key
            android:codes="104"
            android:keyLabel="h"/>
        <Key
            android:codes="105"
            android:keyLabel="i"/>
        <Key
            android:codes="106"
            android:keyEdgeFlags="right"
            android:keyLabel="j"/>

    </Row>

    <Row>
        <Key
            android:codes="107"
            android:keyEdgeFlags="left"
            android:keyLabel="k"/>
        <Key
            android:codes="108"

            android:keyLabel="l"/>
        <Key
            android:codes="109"

            android:keyLabel="m"/>
        <Key
            android:codes="110"
            android:keyLabel="n"/>
        <Key
            android:codes="111"
            android:keyEdgeFlags="right"
            android:keyLabel="o"/>

    </Row>

    <Row>
        <Key
            android:codes="112"
            android:keyEdgeFlags="left"
            android:keyLabel="p"/>
        <Key
            android:codes="113"
            android:keyLabel="q"/>
        <Key
            android:codes="114"

            android:keyLabel="r"/>
        <Key
            android:codes="115"

            android:keyLabel="s"/>
        <Key
            android:codes="116"
            android:keyEdgeFlags="right"
            android:keyLabel="t"/>

    </Row>

    <Row>
        <Key
            android:codes="117"
            android:keyEdgeFlags="left"
            android:keyLabel="u"/>
        <Key
            android:codes="118"
            android:keyLabel="v"/>
        <Key
            android:codes="119"
            android:keyLabel="w"/>
        <Key
            android:codes="120"

            android:keyLabel="x"/>
        <Key
            android:codes="121"
            android:keyEdgeFlags="right"
            android:keyLabel="y"/>
    </Row>

    <Row>


        <Key
            android:codes="122"
            android:keyEdgeFlags="left"
            android:keyLabel="z"/>
        <Key
            android:codes="32"
            android:isRepeatable="true"
            android:keyLabel="@string/key_space"
            android:keyWidth="40%p"/>
        <Key
            android:codes="-5"
            android:isRepeatable="true"
            android:keyEdgeFlags="right"
            android:keyLabel="@string/key_delete"
            android:keyWidth="40%p"/>

    </Row>
    <Row>

        <Key
            android:codes="-99999"
            android:keyEdgeFlags="left"
            android:keyLabel="@string/key_chars"
            android:keyWidth="50%p"/>

        <Key
            android:codes="-1"

            android:keyLabel="@string/key_shift"
            android:keyWidth="50%p"/>
        <Key
            android:codes="-4"
            android:keyEdgeFlags="right"
            android:keyLabel="@string/key_enter"
            android:keyWidth="40%p"/>


    </Row>

</Keyboard>